# woa_multithread

./: CMakeLists.txt  README.md
include/: data.h  forward_kinematics.h  woa.h  woa_algorithm.h
openGJK/: CMakeLists.txt  openGJK.c
openGJK/include/: openGJK.h
src/: A_b.cpp  J_Base2EE.cpp  J_bm.cpp  calc_binomial.cpp  calc_fitness_woa.cpp  calc_p.cpp  calc_q_ddot.cpp  calc_q_dot.cpp  calc_r.cpp  delta_var.cpp  forward_kin.cpp  global_data.cpp  links_transform.cpp  main.cpp  read_vertex_file.cpp  test_kinematics.cpp
utils/: CMakeLists.txt
utils/include/: utils.h
utils/src/: LU_inv_solver.cpp  MatrixAdd_.cpp  MatrixCopy_.cpp  MatrixDiagExpand.cpp  MatrixExtract_.cpp  MatrixMulti.cpp  MatrixMultiTranspose.cpp  MatrixMulti_.cpp  MatrixSub_.cpp  MatrixTranspose.cpp  MatrixTranspose_.cpp  ScaleMatrix_.cpp  SetZeroMatrix_.cpp  calc_Euler_dev2angvl.cpp  cross.cpp  cxyz.cpp  dc2euler.cpp  determinantOfMatrix.cpp  euler_ZYX2dc.cpp  primerange.cpp  quaternion2dc.cpp  quaternion2euler.cpp  random_float_generation.cpp  rpy2dc.cpp  vector_math.cpp  zyx2quaternion.cpp
